# openxr-explorer

./: .gitignore  CMakeLists.txt  README.md  buildrelease.bat
src/openxrexplorer/: CMakeLists.txt  app_cli.cpp  main.cpp  openxr_info.cpp  openxr_info.h
src/xrsetruntime/: CMakeLists.txt
